--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </div>
     </header>
     <main>
+      <!-- first section -->
       <section class="first-sec">
         <div class="sec-image">
           <div class="circle"></div>
