--- a/index.html
+++ b/index.html
@@ -47,6 +47,32 @@
           </ul>
         </div>
       </section>
+      <!-- second section -->
+       <section class="second-sec">
+        <h3 class="sec-title">My Plans</h3>
+        <div class="plans">
+          <div class="plan-name">
+            <img src="images/icons/js.png" alt="javascript">
+            <div class="plan-title">Javascript</div>
+            <p class="plan-description">I want to learn</p>
+          </div>
+          <div class="plan-name">
+            <img src="images/icons/web.png" alt="web development">
+            <div class="plan-title">Web development</div>
+            <p class="plan-description">I want to start</p>
+          </div>
+          <div class="plan-name">
+            <img src="images/icons/smoke.png" alt="smoking">
+            <div class="plan-title">Smoking habit</div>
+            <p class="plan-description">I want to end</p>
+          </div>
+          <div class="plan-name">
+            <img src="images/icons/ecom.png" alt="ecommerce">
+            <div class="plan-title">E-commerce</div>
+            <p class="plan-description">I want to develop</p>
+          </div>
+        </div>
+       </section>
     </main>
     <footer></footer>
   </body>
