complete the page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -29,7 +29,7 @@
       <section class="first-sec">
         <div class="sec-image">
           <div class="circle"></div>
-          <img src="images/person.png" alt="" /> 
+          <img src="images/person.png" alt="" />
         </div>
         <div class="sec-text">
           <h2 class="sec-title">My failures of previous year</h2>
@@ -48,32 +48,66 @@
         </div>
       </section>
       <!-- second section -->
-       <section class="second-sec">
+      <section class="second-sec">
         <h3 class="sec-title">My Plans</h3>
         <div class="plans">
           <div class="plan-name">
-            <img src="images/icons/js.png" alt="javascript">
-            <div class="plan-title">Javascript</div>
-            <p class="plan-description">I want to learn</p>
-          </div>
-          <div class="plan-name">
-            <img src="images/icons/web.png" alt="web development">
+            <img src="images/icons/web.png" alt="web development" />
             <div class="plan-title">Web development</div>
             <p class="plan-description">I want to start</p>
           </div>
           <div class="plan-name">
-            <img src="images/icons/smoke.png" alt="smoking">
+            <img src="images/icons/js.png" alt="javascript" />
+            <div class="plan-title">Javascript</div>
+            <p class="plan-description">I want to learn</p>
+          </div>
+
+          <div class="plan-name">
+            <img src="images/icons/smoke.png" alt="smoking" />
             <div class="plan-title">Smoking habit</div>
             <p class="plan-description">I want to end</p>
           </div>
           <div class="plan-name">
-            <img src="images/icons/ecom.png" alt="ecommerce">
+            <img src="images/icons/ecom.png" alt="ecommerce" />
             <div class="plan-title">E-commerce</div>
             <p class="plan-description">I want to develop</p>
           </div>
         </div>
-       </section>
+      </section>
+      <section class="third-sec">
+        <div class="bg-image">
+          <div class="top-content">
+            <h1 class="top-text">Awlays keep a positive mindset</h1>
+            <button class="btn-call">Call Now</button>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-sec">
+        <div class="contact-info">
+          <h1>Future</h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words
+          </p>
+          <p><a href="">Email: Sumsuddohaomar09@gmail.com</a></p>
+          <p>Phone : 01500 00 00 00</p>
+          <div class="icons">
+            <a href=""><img src="images/icons/fb.png" alt="facebook" /></a>
+            <a href=""><img src="images/icons/twitter.png" alt="twitter" /></a>
+            <a href=""><img src="images/icons/youtube.png" alt="youtube" /></a>
+          </div>
+        </div>
+        <div class="subscribe">
+          <h1>Please Do Subscribe</h1>
+          <form action="">
+            <input type="email" placeholder="Enter Your Email" />
+            <input type="submit" value="Subscribe" />
+          </form>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
